--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^16.3.17",
@@ -19,6 +20,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack -w",
+    "open": "open public/index.html",
     "deploy": "netlify deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
