--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "office-ui-fabric-react": "^6.9.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "styled-components": "^3.3.2"
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "@types/react": "^16.3.17",
